syntax = "proto3";

option java_package = "com.grpc.grpc_server.services";
option java_outer_classname = "MensajeServiceProto";

service MensajeService {
    rpc enviarMensaje(MensajeRequest) returns (MensajeResponse);
}

message MensajeRequest {
    string mensaje = 1;
}

message MensajeResponse {
    string respuesta = 1;
}